# system-info

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
system_info/: __init__.py  core.py
tests/: test_system_info.py
